# nginx-healthcheck-plugin

./: .gitignore  Changelog.md  LICENSE  Makefile  README.md  backends.conf  config  dependencies.cabal  nginx.conf  nginx_shared.conf  ngx-export-healthcheck.cabal  ngx-healthcheck.cabal  ngx_healthcheck.hs  ngx_healthcheck_plugin.c  ngx_healthcheck_plugin.h  ngx_healthcheck_plugin_module_api.c  ngx_healthcheck_plugin_ulist.c
.github/workflows/: ci.yml  ci.yml.v1  ci.yml.v2
NgxExport/: Healthcheck.hs
NgxExport/Healthcheck/: Types.hs
periodic/: Makefile  cabal.project  nginx.conf  nginx_shared.conf  ngx-healthcheck-periodic.cabal  ngx_healthcheck_periodic.hs
prometheus/: Makefile  cabal.project  nginx.conf  nginx_shared.conf  ngx-healthcheck-prometheus.cabal  ngx_healthcheck_prometheus.hs
simple/: Makefile  TestSSL.md  cabal.project  nginx.conf  nginx_nosnap.conf  nginx_shared.conf  ngx-healthcheck.cabal
test/t/: basic.t
