name:                ngx-healthcheck
version:             0.1.0.0
synopsis:            Active health check and monitor for Nginx backends
description:         Active health check and monitor for Nginx backends
author:              Alexey Radkov <alexey.radkov@gmail.com>
maintainer:          Alexey Radkov <alexey.radkov@gmail.com>
category:            Network
build-type:          Simple
cabal-version:       >= 1.10

library
  build-depends:     base >=4.8 && <5
                   , ngx-export >= 1.4.1
                   , http-client
                   , http-types
                   , containers
                   , async
                   , enclosed-exceptions
                   , unix
                   , bytestring
                   , vector
                   , text
                   , aeson >= 1.0.0.0
                   , time
                   , snap-server
                   , safe

