name:                  ngx-export-healthcheck
version:               1.4
synopsis:              Active health check and monitor for Nginx backends
description:           Active health check and monitor for Nginx backends
author:                Alexey Radkov <alexey.radkov@gmail.com>
maintainer:            Alexey Radkov <alexey.radkov@gmail.com>
category:              Network
build-type:            Simple
cabal-version:         1.20

flag SnapStatsServer
  description:         Build Snap server to collect stats.

library
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <5
                     , ngx-export >= 1.7.1
                     , http-client
                     , http-client-brread-timeout
                     , http-types
                     , containers
                     , async
                     , bytestring
                     , vector
                     , text
                     , aeson >= 1.0.0.0
                     , time
                     , safe

  if flag(SnapStatsServer)
    build-depends:     snap-core
                     , snap-server
                     , enclosed-exceptions
    cpp-options:      -DSNAP_STATS_SERVER


  exposed-modules:     NgxExport.Healthcheck

  ghc-options:        -Wall

