name:                  ngx-export-healthcheck
version:               1.6.2
synopsis:              Active health checks and monitoring of Nginx upstreams
description:           Active health checks and monitoring of Nginx upstreams.
        .
        This is a part of <https://github.com/lyokha/nginx-healthcheck-plugin>.
        Custom libraries are required to be linked against C module
        /ngx_healthcheck_plugin/.
homepage:              http://github.com/lyokha/nginx-healthcheck-plugin
license:               BSD3
license-file:          LICENSE
extra-source-files:    Changelog.md
author:                Alexey Radkov <alexey.radkov@gmail.com>
maintainer:            Alexey Radkov <alexey.radkov@gmail.com>
stability:             stable
copyright:             2022-2023 Alexey Radkov
category:              Network
build-type:            Simple
cabal-version:         1.20

flag SnapStatsServer
  description:         Build Snap server to collect stats.

flag HealthcheckHttps
  description:         Support secure connections to endpoints.

library
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <5
                     , ngx-export >= 1.7.1
                     , http-client
                     , http-client-tls >= 0.3.4
                     , http-client-brread-timeout
                     , http-types
                     , containers
                     , async
                     , bytestring
                     , vector
                     , text
                     , aeson >= 1.0.0.0
                     , time
                     , safe

  if flag(SnapStatsServer)
    build-depends:     snap-core
                     , snap-server
                     , enclosed-exceptions
    cpp-options:      -DSNAP_STATS_SERVER

  if flag(HealthcheckHttps)
    build-depends:     http-client-tls >= 0.3.4
                     , unordered-containers
                     , data-default-class
                     , crypton-connection
                     , crypton-x509
                     , crypton-x509-system
                     , crypton-x509-validation
                     , tls >= 1.4.0
    cpp-options:      -DHEALTHCHECK_HTTPS


  exposed-modules:     NgxExport.Healthcheck
  other-modules:       NgxExport.Healthcheck.Types

  ghc-options:        -Wall

